@@ -2240,6 +2240,36 @@ $wgMessageStructure = array(
 		'iranian-calendar-m11',
 		'iranian-calendar-m12',
 	),
+	'hebrew-dates' => array(
+		'hebrew-calendar-m1',
+		'hebrew-calendar-m2',
+		'hebrew-calendar-m3',
+		'hebrew-calendar-m4',
+		'hebrew-calendar-m5',
+		'hebrew-calendar-m6',
+		'hebrew-calendar-m6a',
+		'hebrew-calendar-m6b',
+		'hebrew-calendar-m7',
+		'hebrew-calendar-m8',
+		'hebrew-calendar-m9',
+		'hebrew-calendar-m10',
+		'hebrew-calendar-m11',
+		'hebrew-calendar-m12',
+		'hebrew-calendar-m1-gen',
+		'hebrew-calendar-m2-gen',
+		'hebrew-calendar-m3-gen',
+		'hebrew-calendar-m4-gen',
+		'hebrew-calendar-m5-gen',
+		'hebrew-calendar-m6-gen',
+		'hebrew-calendar-m6a-gen',
+		'hebrew-calendar-m6b-gen',
+		'hebrew-calendar-m7-gen',
+		'hebrew-calendar-m8-gen',
+		'hebrew-calendar-m9-gen',
+		'hebrew-calendar-m10-gen',
+		'hebrew-calendar-m11-gen',
+		'hebrew-calendar-m12-gen',
+	),
 );
 /** Comments for each block */
 $wgBlockComments = array(
@@ -2274,7 +2304,7 @@ XHTML id names.",
 	'history'             => 'History pages',
 	'history-feed'        => 'Revision feed',
 	'revdelete'           => 'Revision deletion',
-	'oversightlog'       => 'Oversight log',
+	'oversightlog'        => 'Oversight log',
 	'diffs'               => 'Diffs',
 	'search'              => 'Search results',
 	'preferences'         => 'Preferences page',
@@ -2410,6 +2440,7 @@ Variants for Chinese language",
 	'watchlisteditor'     => 'Watchlist editor',
 	'watchlisttools'      => 'Watchlist editing tools',
 	'iranian-dates'       => 'Iranian month names',
+	'hebrew-dates'        => 'Hebrew month names',
 );
 
 /** Short comments for standalone messages */
